               a ‘data.frame’ (column 1 is of type ‘factor’ instead
               ‘character’),

             • function will not stop anymore if grain and position
               number do not match,

             • adjust graphical ouptut,

             • add new argument ‘model_baSAR’ for user defined models,

             • a lots of minor improvements.

         • ‘analyse_SAR.CWOSL()’

             • The argument 'sig0' was not passed to
               ‘calc_OSLLxTxRatio()’ as stated in the description of
               the ‘...’ argument. Fixed.

         • ‘merge_RisoeBINfileData()’

             • Account for 'implicit list embedding of S4 objects is
               deprecated' warning by changing the code (no visible
               user effect, apart from no visible warning anymore).

         • ‘plot_AbanicoPlot()’

             • Function got a new argument ‘line.lty’ to controll the
               appearance of additional lines.

         • ‘plot_GrowthCurve()’

             • Move ‘call’ output in the ‘RLum.Results’ output element
               ‘list’.

         • ‘read_BIN2R()’

             • Add suppurt for BIN-file version 8; thanks for the
               support by Kristina Thomsen from Risoe.

         • ‘Risoe.BINfileData-class’

             • Add support for BIN-file version 8.

         • ‘verify_SingleGrainData()’

             • Add argument ‘plot’ to function and with this a
               graphical feedback (default is ‘FALSE’),

             • enhance manual to better describe the applied selection
               method.

         • ‘write_R2BIN()’

             • Add support for BIN-file version 8.

  S3-generics:

         • The method ‘subset’ for ‘RisoeBINfileData’ objects got a new
           argument ‘records.rm’. If set to ‘FALSE’ curves are only
           selected/deselected, but not removed all.

  Internals:

         • Add package ‘coda’ as suggested package.
